2007-10-19  Akim Demaille  <demaille@gostai.com>

	Define uint32_t before using it.
	* windows.hh: here.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Define useconds_t.
	* windows.hh: here.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Avoid macros.
	* windows.hh (sleep, usleep): Rewrite as inline functions.
	This has not been tested on Windows...

2007-10-10  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove a duplicate comment.
	* compiler.hh: Here.

2007-10-10  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add __PRETTY_FUNCTION__ support for MSVC.
	* compiler.hh [_MSC_VER]: Define __PRETTY_FUNCTION__.

2007-10-09  Thomas Moulard  <thomas@moulard.net>

	Disable shared-ptr if Boost is not available.
	* deref.hh,
	* deref.hxx: Here.
	* shared-ptr.hh: Include config.h, replace NO_BOOST by LIBPORT_NO_BOOST.

2007-10-09  Thomas Moulard  <thomas@moulard.net>

	Disable shared-ptr if NO_BOOST is defined.
	* README: Document.
	* shared-ptr.hh: Here.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	Disable invariant.
	* contract.hh: Disable, there is a member with the same name
	in uvar.hh.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	DISABLE_DEBUG_TRACES.
	* compiler.hh (ECHO): If DISABLE_DEBUG_TRACES, do nothing.

2007-10-04  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Provide replacement implementations for `trunc'.
	* ufloat.hh [!LIBPORT_HAVE_TRUNC]: Here.
	* ufloat.h [!LIBPORT_HAVE_TRUNC]: Import `trunc' in the global
	namespace.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Include `libport/config.h' instead of `config.h'.
	* ufloat.h,
	* ufloat.hh: Adjust includes and fix a couple of Doxygen comments.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Use config.h to know whether HAVE_ROUND.
	* ufloat.h,
	* ufloat.hh: Here.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add replacement implementation of `round'.
	* ufloat.hh [!HAVE_ROUND]: Provide replacement implementations of
	round for float, double and long double.